# MySecondSemesterPain

./: CMakeLists.txt  README.md  main.cpp
App/: CMakeLists.txt  app.cpp  app.h
Color/: CMakeLists.txt  Color.cpp  Color.h
Models/: CMakeLists.txt
Models/Human/: Human.cpp  Human.h
Models/Subject/: Subject.cpp  Subject.h
MyConMenu/: CMakeLists.txt
MyConMenu/AbstractMenuItem/: AbstractMenuItem.cpp  AbstractMenuItem.h
MyConMenu/CMenu/: CMenu.cpp  CMenu.h
MyConMenu/CMenuItem/: CMenuItem.cpp  CMenuItem.h
Screens/: CMakeLists.txt  InterfaceScreen.cpp  InterfaceScreen.h
Screens/Auth/: Auth.cpp  Auth.h
State/: CMakeLists.txt  State.h  Store.cpp  Store.h
